force-app/main/default/objects/IdvEn_Enrollment_Status_Config__mdt/IdvEn_Enrollment_Status_Config__mdt.object-meta.xml
<CustomObject>
    <description>Individual enrollment&apos;s enrollment status configuration</description>
    <label>IdvEn Enrollment Status Config</label>
    <pluralLabel>IdvEn Enrollment Status Config</pluralLabel>
</CustomObject>