force-app/main/default/objects/IdvEn_Enrollment_Status_Config__mdt/fields/Grade_Result__c.field-meta.xml
<CustomField>
    <fullName>Grade_Result__c</fullName>
    <label>Grade Result</label>
    <length>60</length>
    <type>Text</type>
</CustomField>