force-app/main/default/objects/IdvEn_Enrollment_Status_Config__mdt/fields/Include_In_Fee__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine whether the enrollment status should generate a fee</description>
    <inlineHelpText>Determine whether the enrollment status should generate a fee</inlineHelpText>
    <label>Include In Fee</label>
    <type>Checkbox</type>
</CustomField>