force-app/main/default/objects/IdvEn_Enrollment_Status_Config__mdt/fields/Include_In_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Rollup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine if the enrollment status should be rollup to study offering</description>
    <inlineHelpText>Determine if the enrollment status should be rollup to study offering</inlineHelpText>
    <label>Include In Rollup</label>
    <type>Checkbox</type>
</CustomField>