force-app/main/default/objects/IdvEn_Enrollment_Status_Config__mdt/fields/Increase_Attempt_Number__c.field-meta.xml
<CustomField>
    <fullName>Increase_Attempt_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check whether the enrollment status of the last attempted individual enrollment contributes to the attempt count</description>
    <inlineHelpText>Check whether the enrollment status of the last attempted individual enrollment contributes to the attempt count</inlineHelpText>
    <label>Increase Attempt Number</label>
    <type>Checkbox</type>
</CustomField>