force-app/main/default/objects/IdvEn_Enrollment_Status_Config__mdt/fields/Individual_Plan_Structure_Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Individual_Plan_Structure_Unit_Status__c</fullName>
    <inlineHelpText>The status for individual plan structure unit to be set to for the enrollment status change.</inlineHelpText>
    <label>Individual Plan Structure Unit Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>