force-app/main/default/objects/IdvEn_Enrollment_Status_Config__mdt/fields/Individual_Session_Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Individual_Session_Enrollment_Status__c</fullName>
    <label>Individual Session Enrollment Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>