force-app/main/default/objects/IdvEn_Enrollment_Status_Config__mdt/fields/IPS_Assignment_Priority__c.field-meta.xml
<CustomField>
    <fullName>IPS_Assignment_Priority__c</fullName>
    <description>The priority order used to determine which IEN should be linked to IPS. The priority is calculated based on enrollment status and grade result combinations</description>
    <inlineHelpText>The priority order used to determine which IEN should be linked to IPS. The priority is calculated based on enrollment status and grade result combinations</inlineHelpText>
    <label>IPS Assignment Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>