force-app/main/default/objects/IdvEn_Enrollment_Status_Config__mdt/fields/Rollup_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Field_API_Name__c</fullName>
    <description>Semi-colon separated list of target field API names</description>
    <inlineHelpText>Semi-colon separated list of target field API names</inlineHelpText>
    <label>Rollup Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>