force-app/main/default/objects/IdvEn_Enrollment_Status_Config__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of enrollment status</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Enrollment_Requested</fullName>
                <label>Enrollment Requested</label>
            </value>
            <value>
                <fullName>In_Progress</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Completed_Fail</fullName>
                <label>Completed Fail</label>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
            </value>
            <value>
                <fullName>Dropped</fullName>
            </value>
            <value>
                <fullName>Withdrawal_Requested</fullName>
                <label>Withdrawal Requested</label>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Withdrawn_Fail</fullName>
                <label>Withdrawn Fail</label>
            </value>
            <value>
                <fullName>Preview</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>