force-app/main/default/objects/IdvEn_Enrollment_Status_Config__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Active__c</columns>
    <columns>Enrollment_Status__c</columns>
    <columns>Grade_Result__c</columns>
    <columns>Type__c</columns>
    <columns>Individual_Plan_Structure_Unit_Status__c</columns>
    <columns>Individual_Session_Enrollment_Status__c</columns>
    <columns>Increase_Attempt_Number__c</columns>
    <columns>IPS_Assignment_Priority__c</columns>
    <columns>Include_In_Rollup__c</columns>
    <columns>Rollup_Field_API_Name__c</columns>
    <columns>Include_In_Fee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>